Fixed issue with main prj img overflowing

--- a/src/Pages/About.module.css
+++ b/src/Pages/About.module.css
@@ -5,6 +5,7 @@
     padding-right: 10%;
     height: 100vh;
     width: 70%;
+    grid-column-gap: none;
     align-items: center;
     justify-items: center;
     color: white;
@@ -78,12 +79,13 @@
     padding-bottom: 3%;
     border: 1px solid rgba(255, 255, 255, 0.767);
     border-left: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 70%;
-    width: 80%;
+    min-height: 65%; 
+    max-height: 70%;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 3%;
 }
+
 
 #right_about_main {
     display: flex;
@@ -91,15 +93,17 @@
     position: relative;
     background-color: rgba(20, 13, 12, 0.473);
     color: rgb(201, 173, 102);
+    min-height: 45%;
 }
 
 #right_about_main > h2 {
-    max-height: 8%;
+    box-sizing: border-box;
 }
 
 #right_about_main img {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #right_about_sides_container {
